<resources>
    <string name="app_name">HW2.1.1</string>
    <string name="hintMoney">Ввод денег</string>
    <string name="hintInfo">Информация об оплате</string>
    <string name="okBtn">OK</string>
    <string name="bankCardChkBx">С банковской карты</string>
    <string name="mobilePhoneChkBx">С мобильного телефона</string>
    <string name="cashAddressChkBx">Наличными по адресу</string>
    <string name="toastBankCard">Оплата с банковской карты</string>
    <string name="toastMobilePhone">Оплата с мобильного телефона</string>
    <string name="toastCash">Оплата наличными по адресу</string>
</resources>
