<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="50dp"
        tools:context=".MainActivity">
        <EditText
            android:id="@+id/inputMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hintMoney"
            android:inputType="number"/>
        <EditText
            android:id="@+id/inputInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hintInfo" />
        <Button
            android:id="@+id/btnOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okBtn" />
        <CheckBox
            android:id="@+id/bankCardChkBx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bankCardChkBx"/>
        <CheckBox
            android:id="@+id/mobilePhoneChkBx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobilePhoneChkBx"/>
        <CheckBox
            android:id="@+id/cashAddressChkBx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cashAddressChkBx"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>